# trade-platform

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: pipeline.py
tests/: test_backtest.py  test_backtest_risk.py  test_chan.py  test_indicators.py  test_multiframe.py  test_strategy.py
trade_platform/: __init__.py  backtest.py  chan.py  cli.py  dataio.py  exchanges.py  indicators.py  multiframe.py  plotting.py  strategy.py
