[build-system]
requires = ["pdm-backend>=2.2"]
build-backend = "pdm.backend"

[project]
name = "trade-platform"
version = "0.1.0"
description = "CCXT-based research/trading skeleton with TA, simplified Chan, MTF, backtest, and plotting"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "ccxt>=4.2.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]

[tool.pdm.dev-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "black>=24.3",
]

[project.scripts]
trade-cli = "trade_platform.cli:main"

[tool.pdm]
package-dir = "."

[tool.pdm.scripts]
lint = "ruff check trade_platform tests"
format = "black trade_platform tests"
format-check = "black --check trade_platform tests"
test = "pytest -q"
bt_momentum = "trade-cli backtest --input data/BTCUSDT-1h.csv --rsi-min 55 --min-atr-pct 0.004 --stop-pct 0.02 --tp-pct 0.04"
bt_meanrev = "trade-cli backtest --input data/BTCUSDT-1h.csv --rsi-max 45 --max-atr-pct 0.02 --stop-pct 0.02 --tp-pct 0.03"
mtf_momentum_4h_1d = "trade-cli mtf --lower-input data/BTCUSDT-4h.csv --higher-input data/BTCUSDT-1d.csv --require-htf-breakout --min-htf-run 3 --rsi-min 55 --min-atr-pct 0.004 --stop-pct 0.02 --tp-pct 0.04 --run-backtest"
mtf_meanrev_4h_1d = "trade-cli mtf --lower-input data/BTCUSDT-4h.csv --higher-input data/BTCUSDT-1d.csv --min-htf-run 2 --rsi-max 45 --max-atr-pct 0.02 --stop-pct 0.02 --tp-pct 0.03 --run-backtest"
